--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Background images</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
@@ -25,14 +26,15 @@
     </div>
     <form class="unit xs-1 s-1 m-1-2 push-0 pad-t-1-2 pad-b-1-2">
       <div class="grid grid-middle">
-      <div class="search-label unit xs-1 s-1 m-1 l-1-4 gutter-1-2">
-        <label for="search">Search</label>
-      </div>
-      <div class="unit xs-1 s-1 m-1 l-1-2 gutter-1-2">
-        <input class="search-input" type="search" id="search">
-      </div>
-      <div class="unit xs-1 s-1 m-1 l-1-4 gutter-1-2 pad-t-1-2 pad-b-1-2">
-        <button class="search-btn btn w-1" type="submit">Find</button>
+        <div class="search-label unit xs-1 s-1 m-1 l-1-4 gutter-1-2">
+          <label for="search">Search</label>
+        </div>
+        <div class="unit xs-1 s-1 m-1 l-1-2 gutter-1-2">
+          <input class="search-input" type="search" id="search">
+        </div>
+        <div class="unit xs-1 s-1 m-1 l-1-4 gutter-1-2 pad-t-1-2 pad-b-1-2">
+          <button class="search-btn btn w-1" type="submit">Find</button>
+        </div>
       </div>
     </form>
   </footer>
